--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Primary Meta Tags -->
+    <title>A mini Invoice </title>
+    <link rel="icon" href="./images/online-shopping.png">
+    <meta name="title" content="A mini Invoice " />
+    <meta name="description" content="A mini-invoice using HTML, Tailwind and JS.
 
-    <title>Invoice App</title>
+    " />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content="A mini Invoice " />
+    <meta property="og:description" content="A mini-invoice using HTML, Tailwind and JS.
+
+    " />
+    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:title" content="A mini Invoice " />
+    <meta property="twitter:description" content="A mini-invoice using HTML, Tailwind and JS.
+
+    " />
+    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
   </head>
   <body>
     <main id="app" class="flex flex-col h-screen">
