--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <!-- Primary Meta Tags -->
-    <title>A mini Invoice </title>
+    <title>An Invoice App</title>
     <link rel="icon" href="./images/online-shopping.png">
     <meta name="title" content="A mini Invoice " />
     <meta name="description" content="A mini-invoice using HTML, Tailwind and JS.
