--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       </section>
       <section
         id="sideBar"
-        class="h-screen w-[400px] fixed right-0 bg-white translate-x-full shadow"
+        class="h-screen overflow-y-scroll w-[400px] fixed right-0 bg-white translate-x-full shadow"
       >
         <div class="flex justify-between px-4 items-center">
           <div class="mt-4 px-4 py-2">
