--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="A mini-invoice using HTML, Tailwind and JS.
 
     " />
-    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+    <meta property="og:image" content="./images/invoiceCover.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
