--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta property="twitter:description" content="A mini-invoice using HTML, Tailwind and JS.
 
     " />
-    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+    <meta property="twitter:image" content="./images/invoiceCover.png" />
 
     <!-- Meta Tags Generated with https://metatags.io -->
   </head>
